--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
+    android:id="@+id/drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
@@ -24,6 +24,7 @@
             app:titleTextColor="@color/black"/>
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
+            app:tabMode="scrollable"
             android:layout_below="@id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -39,16 +40,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"/>
-
     </RelativeLayout>
+
     <com.google.android.material.navigation.NavigationView
-        android:fitsSystemWindows="true"
         android:id="@+id/navigation"
-        app:menu="@menu/menu"
-        android:layout_gravity="start"
-        app:itemIconTint="@color/gray"
-        app:headerLayout="@layout/header"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"/>
+        android:layout_gravity="start"
+        android:background="@color/white"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/header"
+        app:itemIconTint="@color/gray"
+        app:menu="@menu/menu" />
 </androidx.drawerlayout.widget.DrawerLayout>
