--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -9,7 +9,7 @@
     android:background="@color/white">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
-        android:layout_marginTop="30dp"
+        app:title="Wallpaper Preview"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
         android:background="@color/cream"
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/set"
-                android:padding="10dp"
+                android:padding="7dp"
                 android:drawablePadding="5dp"
                 android:text="@string/set_wallpaper"
                 android:textColor="@color/black"
@@ -45,7 +45,7 @@
                 app:drawableTopCompat="@drawable/focus" />
             <TextView
                 android:id="@+id/download"
-                android:padding="10dp"
+                android:padding="7dp"
                 android:drawablePadding="5dp"
                 android:text="@string/download"
                 android:textColor="@color/black"
@@ -54,13 +54,22 @@
                 app:drawableTopCompat="@drawable/save" />
             <TextView
                 android:id="@+id/share"
-                android:padding="10dp"
+                android:padding="7dp"
                 android:drawablePadding="5dp"
                 android:text="@string/share_image"
                 android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:drawableTopCompat="@drawable/launch" />
+            <TextView
+                android:id="@+id/bookmark"
+                android:padding="7dp"
+                android:drawablePadding="5dp"
+                android:text="@string/bookmark"
+                android:textColor="@color/black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:drawableTopCompat="@drawable/add_bookmark" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
     <LinearLayout
